Fixed some imgs added forms and fixed some issues with overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1747,6 +1747,7 @@ header {
   justify-content: center;
   align-items: center;
   padding-bottom: 204px;
+  overflow: hidden;
 }
 .collections-heading {
   font-family: "Bakbak One", Arial, sans-serif;
@@ -1801,3 +1802,4 @@ header {
   justify-content: center;
   align-items: center;
 }
+
